<resources>
    <string name="app_name">TernakKu</string>
    <string name="scan_here">Scan Here!</string>
    <string name="previewimg">previewImg</string>
    <string name="camera">Kamera</string>
    <string name="galeri">Galeri</string>

    <string name="desc">Diagnosa Penyakit</string>
    <string name="sample">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna. aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="imgDesc">Image Disease</string>

    <string name="nameDisease">Nama Penyakit</string>

    <string name="prevent">Langkah - langkah yang Diperlukan</string>
    <string name="scan_content">Scan Disini!</string>
    <string name="quetion">quetion</string>
    <string name="cara_penggunaan">Cara Penggunaan</string>
    <string name="useable_kamera">Ambil gambar bagian tubuh sapi atau ayam yang akan discan. Fokuskan gambar pada bagian tubuh yang terkena penyakit. Perhatian!! untuk mendiagnosa penyakit pada ayam, ambil gambar pada kotoran yang dikeluarkan.</string>
    <string name="useable_galeri">Pilih gambar bagian tubuh sapi atau ayam yang jelas dari galeri anda. Perhatian!! untuk mendiagnosa penyakit pada ayam, ambil gambar pada kotoran yang dikeluarkan</string>

    <string name="search_hint">Masukkan nama penyakit…</string>
    <string name="logo">logo</string>

    <string name="favorite">Favorite</string>
    <string name="logout">Keluar</string>

    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="hintName">Masukkan Nama</string>
    <string name="hintEmail">Masukkan alamat surel</string>
    <string name="hintPass">Masukkan kata sandi</string>
    <string name="errorPass">minimal 8 karakter untuk membuat password</string>
    <string name="errorEmail">masukkan format email yang benar</string>

    <string name="sign_in">Masuk</string>
    <string name="sign_up">Daftar</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <!--    <integer-array name="id_penyakit">-->
    <!--        <item>1</item>-->
    <!--        <item>2</item>-->
    <!--        <item>3</item>-->
    <!--    </integer-array>-->

    <!--    <string-array name="nama_penyakit">-->
    <!--        <item>Lumpy Cows (local)</item>-->
    <!--        <item>Cocciodiosis (local)</item>-->
    <!--        <item>Salmonella (local)</item>-->
    <!--    </string-array>-->

    <!--    <string-array name="detail_penyakit">-->
    <!--        <item>local Penyakit sapi berbintik, juga dikenal sebagai Penyakit Kulit Berbintik Bovine (LSD), adalah penyakit viral yang mempengaruhi sapi. Penyakit ini ditandai dengan demam, nodul kulit, dan pembengkakan.</item>-->
    <!--        <item>local Coccidiosis adalah penyakit parasit umum pada unggas yang disebabkan oleh protozoa dari genus Eimeria. Penyakit ini mempengaruhi saluran pencernaan dan dapat menyebabkan diare, penurunan berat badan, dan penurunan produksi telur.</item>-->
    <!--        <item>local Salmonella adalah infeksi bakteri yang dapat mempengaruhi unggas maupun ternak. Penyakit ini dapat menyebabkan diare, dehidrasi, dan dalam kasus yang parah, kematian.</item>-->
    <!--    </string-array>-->

    <!--    <string-array name="cara_mengatasi">-->
    <!--        <item>local Untuk mengelola penyakit sapi berbintik, penting untuk mengisolasi hewan yang terinfeksi, menerapkan langkah pengendalian vektor, dan memberikan perawatan suportif. Konsultasikan dengan dokter hewan untuk opsi pengobatan yang spesifik.</item>-->
    <!--        <item>local Untuk mengelola Coccidiosis, penting untuk menjaga kebersihan yang baik di tempat pemeliharaan unggas, menyediakan air minum yang bersih, dan menggunakan obat anticoccidial yang sesuai.</item>-->
    <!--        <item>local Untuk mengelola infeksi Salmonella, penting untuk menjaga kebersihan yang baik, menyediakan air minum yang bersih, dan menerapkan langkah biosekuriti. Pemberian antibiotik yang sesuai mungkin diperlukan setelah berkonsultasi dengan dokter hewan.</item>-->
    <!--    </string-array>-->
</resources>